// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Organism|Footer default 1`] = `
.c0 {
  color: #777;
  padding: 10px 15px;
  height: 20px;
  text-align: center;
  border-top: 1px solid #e6e6e6;
}

.c0:before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  height: 50px;
  overflow: hidden;
  box-shadow: 0 1px 1px rgba(0,0,0,0.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,0.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,0.2);
}

.c1 {
  float: left;
  text-align: left;
}

.c2 {
  font-weight: 300;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  position: absolute;
  right: 0;
  left: 0;
}

.c4 {
  display: inline;
}

.c5 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
  border-color: rgba(175,47,47,0.2);
}

.c5:hover {
  border-color: rgba(175,47,47,0.1);
}

.c6 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
}

.c6:hover {
  border-color: rgba(175,47,47,0.1);
}

@media (max-width:430px) {
  .c0 {
    height: 50px;
  }
}

@media (max-width:430px) {
  .c3 {
    bottom: 10px;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <strong
      className="c2"
    >
      No
    </strong>
     
    items
     left
  </span>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={true}
      >
        All
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={false}
      >
        Active
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={false}
      >
        Completed
      </a>
    </li>
  </ul>
</div>
`;

exports[`FileProperties Organism|Footer show active and completed count 0 and active count 2 1`] = `
.c0 {
  color: #777;
  padding: 10px 15px;
  height: 20px;
  text-align: center;
  border-top: 1px solid #e6e6e6;
}

.c0:before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  height: 50px;
  overflow: hidden;
  box-shadow: 0 1px 1px rgba(0,0,0,0.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,0.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,0.2);
}

.c1 {
  float: left;
  text-align: left;
}

.c2 {
  font-weight: 300;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  position: absolute;
  right: 0;
  left: 0;
}

.c4 {
  display: inline;
}

.c6 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
  border-color: rgba(175,47,47,0.2);
}

.c6:hover {
  border-color: rgba(175,47,47,0.1);
}

.c5 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
}

.c5:hover {
  border-color: rgba(175,47,47,0.1);
}

@media (max-width:430px) {
  .c0 {
    height: 50px;
  }
}

@media (max-width:430px) {
  .c3 {
    bottom: 10px;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <strong
      className="c2"
    >
      2
    </strong>
     
    items
     left
  </span>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={false}
      >
        All
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={true}
      >
        Active
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={false}
      >
        Completed
      </a>
    </li>
  </ul>
</div>
`;

exports[`FileProperties Organism|Footer show all and completed count 1 and active count 1 1`] = `
.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  color: #777;
  padding: 10px 15px;
  height: 20px;
  text-align: center;
  border-top: 1px solid #e6e6e6;
}

.c0:before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  height: 50px;
  overflow: hidden;
  box-shadow: 0 1px 1px rgba(0,0,0,0.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,0.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,0.2);
}

.c1 {
  float: left;
  text-align: left;
}

.c2 {
  font-weight: 300;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  position: absolute;
  right: 0;
  left: 0;
}

.c4 {
  display: inline;
}

.c5 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
  border-color: rgba(175,47,47,0.2);
}

.c5:hover {
  border-color: rgba(175,47,47,0.1);
}

.c6 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
}

.c6:hover {
  border-color: rgba(175,47,47,0.1);
}

.c7 {
  float: right;
  position: relative;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:430px) {
  .c0 {
    height: 50px;
  }
}

@media (max-width:430px) {
  .c3 {
    bottom: 10px;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <strong
      className="c2"
    >
      1
    </strong>
     
    item
     left
  </span>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={true}
      >
        All
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={false}
      >
        Active
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={false}
      >
        Completed
      </a>
    </li>
  </ul>
  <button
    className="c7 c8"
    onClick={[Function]}
  >
    Clear completed
  </button>
</div>
`;

exports[`FileProperties Organism|Footer show completed and completed count 2 and active count 0 1`] = `
.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 {
  color: #777;
  padding: 10px 15px;
  height: 20px;
  text-align: center;
  border-top: 1px solid #e6e6e6;
}

.c0:before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  height: 50px;
  overflow: hidden;
  box-shadow: 0 1px 1px rgba(0,0,0,0.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,0.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,0.2);
}

.c1 {
  float: left;
  text-align: left;
}

.c2 {
  font-weight: 300;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
  position: absolute;
  right: 0;
  left: 0;
}

.c4 {
  display: inline;
}

.c6 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
  border-color: rgba(175,47,47,0.2);
}

.c6:hover {
  border-color: rgba(175,47,47,0.1);
}

.c5 {
  color: inherit;
  margin: 3px;
  padding: 3px 7px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 3px;
}

.c5:hover {
  border-color: rgba(175,47,47,0.1);
}

.c7 {
  float: right;
  position: relative;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:430px) {
  .c0 {
    height: 50px;
  }
}

@media (max-width:430px) {
  .c3 {
    bottom: 10px;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <strong
      className="c2"
    >
      No
    </strong>
     
    items
     left
  </span>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={false}
      >
        All
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c5"
        onClick={[Function]}
        selected={false}
      >
        Active
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c6"
        onClick={[Function]}
        selected={true}
      >
        Completed
      </a>
    </li>
  </ul>
  <button
    className="c7 c8"
    onClick={[Function]}
  >
    Clear completed
  </button>
</div>
`;
